--- a/6694.bib
+++ b/6694.bib
@@ -1,3 +1,12 @@
+@inproceedings{
+schaeffer2024double,
+title={Double Descent Demystified: Identifying, Interpreting \& Ablating the Sources of a Deep Learning Puzzle},
+author={Rylan Schaeffer and Zachary Robertson and Akhilan Boopathy and Mikail Khona and Kateryna Pistunova and Jason William Rocks and Ila R Fiete and Andrey Gromov and Sanmi Koyejo},
+booktitle={The Third Blogpost Track at ICLR 2024},
+year={2024},
+url={https://openreview.net/forum?id=muC7uLvGHr}
+}
+
 @inproceedings{vaswani2017attention,
   title     = {Attention Is All You Need},
   author    = {Vaswani, Ashish and Shazeer, Noam and Parmar, Niki and Uszkoreit, Jakob and Jones, Llion and Gomez, Aidan N. and Kaiser, {\L}ukasz and Polosukhin, Illia},
